bindings/c/pnf_c.hpp

/// \brief Opaque indicators handle.
    typedef struct PnfIndicators PnfIndicators;
/// \brief Signal type enumeration.
    typedef enum {
        PNF_SIGNAL_NONE = 0,
        PNF_SIGNAL_BUY = 1,
        PNF_SIGNAL_SELL = 2
    } PnfSignalType;
/// \brief Pattern type enumeration.
    typedef enum {
        PNF_PATTERN_NONE = 0,
        PNF_PATTERN_DOUBLE_TOP_BREAKOUT,
        PNF_PATTERN_DOUBLE_BOTTOM_BREAKDOWN,
        PNF_PATTERN_TRIPLE_TOP_BREAKOUT,
        PNF_PATTERN_TRIPLE_BOTTOM_BREAKDOWN,
        PNF_PATTERN_QUADRUPLE_TOP_BREAKOUT,
        PNF_PATTERN_QUADRUPLE_BOTTOM_BREAKDOWN,
        PNF_PATTERN_ASCENDING_TRIPLE_TOP,
        PNF_PATTERN_DESCENDING_TRIPLE_BOTTOM,
        PNF_PATTERN_BULLISH_CATAPULT,
        PNF_PATTERN_BEARISH_CATAPULT,
        PNF_PATTERN_BULLISH_SIGNAL_REVERSED,
        PNF_PATTERN_BEARISH_SIGNAL_REVERSED,
        PNF_PATTERN_BULLISH_TRIANGLE,
        PNF_PATTERN_BEARISH_TRIANGLE,
        PNF_PATTERN_LONG_TAIL_DOWN,
        PNF_PATTERN_HIGH_POLE,
        PNF_PATTERN_LOW_POLE,
        PNF_PATTERN_BULL_TRAP,
        PNF_PATTERN_BEAR_TRAP,
        PNF_PATTERN_SPREAD_TRIPLE_TOP,
        PNF_PATTERN_SPREAD_TRIPLE_BOTTOM
    } PnfPatternType;
/// \brief PnfSignal.
    typedef struct {
        PnfSignalType type;
        int column_index;
        double price;
    } PnfSignal;
/// \brief PnfPattern.
    typedef struct {
        PnfPatternType type;
        int start_column;
        int end_column;
        double price;
        bool is_bullish;
    } PnfPattern;
/// \brief PnfDoubleArray.
    typedef struct {
        double* data;
        size_t length;
    } PnfDoubleArray;
/// \brief PnfSignalArray.
    typedef struct {
        PnfSignal* data;
        size_t length;
    } PnfSignalArray;
/// \brief PnfPatternArray.
    typedef struct {
        PnfPattern* data;
        size_t length;
    } PnfPatternArray;
/// \brief Indicators bollinger middle values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_bollinger_middle_values(const PnfIndicators* ind);
/// \brief Indicators bollinger upper values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_bollinger_upper_values(const PnfIndicators* ind);
/// \brief Indicators bollinger lower values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_bollinger_lower_values(const PnfIndicators* ind);
    // RSI values
/// \brief Indicators rsi.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_rsi(const PnfIndicators* ind, int column);
/// \brief Indicators rsi is overbought.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API bool pnf_indicators_rsi_is_overbought(const PnfIndicators* ind, int column);
/// \brief Indicators rsi is oversold.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API bool pnf_indicators_rsi_is_oversold(const PnfIndicators* ind, int column);
/// \brief Indicators rsi values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_rsi_values(const PnfIndicators* ind);
    // OBV values
/// \brief Indicators obv.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_obv(const PnfIndicators* ind, int column);
/// \brief Indicators obv values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_obv_values(const PnfIndicators* ind);
    // Bullish percent
/// \brief Indicators bullish percent.
    /// \param ind 
    /// \return 
    PNF_API double pnf_indicators_bullish_percent(const PnfIndicators* ind);
/// \brief Indicators is bullish alert.
    /// \param ind 
    /// \return 
    PNF_API bool pnf_indicators_is_bullish_alert(const PnfIndicators* ind);
/// \brief Indicators is bearish alert.
    /// \param ind 
    /// \return 
    PNF_API bool pnf_indicators_is_bearish_alert(const PnfIndicators* ind);
    // Signal detection
/// \brief Indicators current signal.
    /// \param ind 
    /// \return 
    PNF_API PnfSignalType pnf_indicators_current_signal(const PnfIndicators* ind);
/// \brief Indicators signal count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_signal_count(const PnfIndicators* ind);
/// \brief Indicators signal at.
    /// \param ind 
    /// \param index 
    /// \return 
    PNF_API PnfSignal pnf_indicators_signal_at(const PnfIndicators* ind, size_t index);
/// \brief Indicators signals.
    /// \param ind 
    /// \return 
    PNF_API PnfSignalArray pnf_indicators_signals(const PnfIndicators* ind);
/// \brief Indicators buy signal count.
    /// \param ind 
    /// \return 
    PNF_API int pnf_indicators_buy_signal_count(const PnfIndicators* ind);
/// \brief Indicators sell signal count.
    /// \param ind 
    /// \return 
    PNF_API int pnf_indicators_sell_signal_count(const PnfIndicators* ind);
    // Pattern detection
/// \brief Indicators pattern count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_pattern_count(const PnfIndicators* ind);
/// \brief Indicators bullish pattern count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_bullish_pattern_count(const PnfIndicators* ind);
/// \brief Indicators bearish pattern count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_bearish_pattern_count(const PnfIndicators* ind);
/// \brief Indicators pattern at.
    /// \param ind 
    /// \param index 
    /// \return 
    PNF_API PnfPattern pnf_indicators_pattern_at(const PnfIndicators* ind, size_t index);
/// \brief Indicators patterns.
    /// \param ind 
    /// \return 
    PNF_API PnfPatternArray pnf_indicators_patterns(const PnfIndicators* ind);
/// \brief Indicators bullish patterns.
    /// \param ind 
    /// \return 
    PNF_API PnfPatternArray pnf_indicators_bullish_patterns(const PnfIndicators* ind);
/// \brief Indicators bearish patterns.
    /// \param ind 
    /// \return 
    PNF_API PnfPatternArray pnf_indicators_bearish_patterns(const PnfIndicators* ind);
    // Support/Resistance
/// \brief Indicators support level count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_support_level_count(const PnfIndicators* ind);