bindings/csharp/NativeMethods.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_bollinger_middle_values API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_bollinger_middle_values API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfDoubleArray pnf_indicators_bollinger_middle_values(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_bollinger_upper_values API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_bollinger_upper_values API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfDoubleArray pnf_indicators_bollinger_upper_values(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_bollinger_lower_values API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_bollinger_lower_values API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfDoubleArray pnf_indicators_bollinger_lower_values(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_rsi API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_rsi API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="column"></param>
        /// <returns></returns>
        public static extern double pnf_indicators_rsi(IntPtr indicators, int column);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_indicators_rsi_is_overbought API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_rsi_is_overbought API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="column"></param>
        /// <returns></returns>
        public static extern bool pnf_indicators_rsi_is_overbought(IntPtr indicators, int column);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_indicators_rsi_is_oversold API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_rsi_is_oversold API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="column"></param>
        /// <returns></returns>
        public static extern bool pnf_indicators_rsi_is_oversold(IntPtr indicators, int column);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_rsi_values API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_rsi_values API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfDoubleArray pnf_indicators_rsi_values(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_obv API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_obv API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="column"></param>
        /// <returns></returns>
        public static extern double pnf_indicators_obv(IntPtr indicators, int column);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_obv_values API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_obv_values API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfDoubleArray pnf_indicators_obv_values(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_bullish_percent API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_bullish_percent API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern double pnf_indicators_bullish_percent(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_indicators_is_bullish_alert API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_is_bullish_alert API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern bool pnf_indicators_is_bullish_alert(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_indicators_is_bearish_alert API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_is_bearish_alert API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern bool pnf_indicators_is_bearish_alert(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_current_signal API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_current_signal API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern SignalType pnf_indicators_current_signal(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_signal_count API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_signal_count API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern UIntPtr pnf_indicators_signal_count(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_signal_at API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_signal_at API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="index"></param>
        /// <returns></returns>
        public static extern PnfSignal pnf_indicators_signal_at(IntPtr indicators, UIntPtr index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_signals API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_signals API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfSignalArray pnf_indicators_signals(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_buy_signal_count API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_buy_signal_count API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern int pnf_indicators_buy_signal_count(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_sell_signal_count API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_sell_signal_count API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern int pnf_indicators_sell_signal_count(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_pattern_count API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_pattern_count API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern UIntPtr pnf_indicators_pattern_count(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_bullish_pattern_count API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_bullish_pattern_count API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern UIntPtr pnf_indicators_bullish_pattern_count(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_bearish_pattern_count API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_bearish_pattern_count API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern UIntPtr pnf_indicators_bearish_pattern_count(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_pattern_at API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_pattern_at API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="index"></param>
        /// <returns></returns>
        public static extern PnfPattern pnf_indicators_pattern_at(IntPtr indicators, UIntPtr index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_patterns API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_patterns API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfPatternArray pnf_indicators_patterns(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_bullish_patterns API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_bullish_patterns API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfPatternArray pnf_indicators_bullish_patterns(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_bearish_patterns API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_bearish_patterns API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfPatternArray pnf_indicators_bearish_patterns(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_support_level_count API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_support_level_count API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern UIntPtr pnf_indicators_support_level_count(IntPtr indicators);
